@@ -28,8 +28,8 @@ LFLAGS += -L/usr/X11R6/lib -lXi -lXext -lX11 -lm -ldl
 # You can find Ares at: ftp://athena-dist.mit.edu/pub/ATHENA/ares
 LFLAGS += -lares
 
-CORE_OBJS = loki_update.o gtk_ui.o prefpath.o url_paths.o meta_url.o \
-            load_products.o load_patchset.o patchset.o urlset.o \
+CORE_OBJS = loki_update.o gtk_ui.o tty_ui.o prefpath.o url_paths.o \
+            meta_url.o load_products.o load_patchset.o patchset.o urlset.o \
             update.o gpg_verify.o get_url.o \
 			mkdirhier.o text_parse.o log_output.o safe_malloc.o
 
